# myconfig

./: .gitignore  Cargo.toml  README.md  bootstrap.sh  dotfiles.yaml  packages.yaml  todo
dotfiles/: .vimrc  .zshrc  config.fish  init.vim  pre-commit  rustenv.fish  vscode-settings.json
src/: common.rs  dotfiles.rs  lib.rs  main.rs  packages.rs
