[package]
name = "myconfig"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[lib]
name = "myconfig"

[[bin]]
name = "myconfig"

[dependencies]
async-std = { version = "1.6", features = ["attributes"]}
clap = "2.33"
# iced = "0.1"
directories = "3"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml= "0.8"
simplelog = "0.8"

anyhow = "1"
thiserror = "1"

