[package]
name = "myconfig"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[lib]
name = "myconfig"

[[bin]]
name = "myconfig"

[dependencies]
anyhow = "1"
async-std = { version = "1.6", features = ["attributes"]}
structopt = "0.3"
directories = "4"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml= "0.8"
simplelog = "0.11"
thiserror = "1"

